# IAC_lidar2cam_projection

./: =1.0.7  CMakeLists.txt  CameraCorners.txt  LidarUsedToMask.txt  README.md  lidar2cam.cpp  package.xml  pointcloud_raw.txt  setup.py
include/ros2_yolov7/: camera_intrinsics.hpp  lidar2cam.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lidar_camera_projection/lib/lidar_camera_projection/: lidar_cam_node
install/lidar_camera_projection/share/lidar_camera_projection/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
lidar_camera_projection/: chris_to_sean(Close).pkl  chris_to_sean(Far).pkl  combined_output.txt  common_commands.txt  frames.gv  lidar2cam_node.py  lidarchris_node.py  outputBBox_far.txt  outputBbox_close.txt  pair_two_sub.txt  test_l_shaped.py  utils.py  utils_lidar.py
lidar_camera_projection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
log/: latest_build
src/: lidar2cam.cpp  lidar2cam.py
